--- a/index.html
+++ b/index.html
@@ -28,30 +28,33 @@
         </ul>
       </header>
       <section>
-        <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+        <h1>
+<a id="希望成为一个有趣的人" class="anchor" href="#%E5%B8%8C%E6%9C%9B%E6%88%90%E4%B8%BA%E4%B8%80%E4%B8%AA%E6%9C%89%E8%B6%A3%E7%9A%84%E4%BA%BA" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><strong>希望成为一个有趣的人</strong>
+</h1>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
+<h2>
+<a id="1知乎里的stormzhang为我打开一扇窗意外的押运" class="anchor" href="#1%E7%9F%A5%E4%B9%8E%E9%87%8C%E7%9A%84stormzhang%E4%B8%BA%E6%88%91%E6%89%93%E5%BC%80%E4%B8%80%E6%89%87%E7%AA%97%E6%84%8F%E5%A4%96%E7%9A%84%E6%8A%BC%E8%BF%90" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>1.知乎里的stormzhang，为我打开一扇窗（意外的押运~）</h2>
 
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
+<pre><code>大学四年，三年估计都在打游戏~到了大四实习，去的是一家知名的代工厂，有倒班的那种，昼夜颠倒，那时候我就一直在想，这是我想要的生活吗？肯定不是。大四下学期，一次偶然的机会在知乎上看到了stormzhang的回答，看得我是一阵心情澎湃啊，于是信誓旦旦的要进军it~这篇我应该现在还收藏着：http://stormzhang.com/android/2014/07/07/learn-android-from-rookie/
+</code></pre>
 
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
+<h2>
+<a id="2感谢studyjams和第一行代码其实还有很多网站比如慕课网" class="anchor" href="#2%E6%84%9F%E8%B0%A2studyjams%E5%92%8C%E7%AC%AC%E4%B8%80%E8%A1%8C%E4%BB%A3%E7%A0%81%E5%85%B6%E5%AE%9E%E8%BF%98%E6%9C%89%E5%BE%88%E5%A4%9A%E7%BD%91%E7%AB%99%E6%AF%94%E5%A6%82%E6%85%95%E8%AF%BE%E7%BD%91" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>2.感谢studyjams和第一行代码（其实还有很多网站：比如慕课网）</h2>
 
-<h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Creating pages manually</h3>
+<pre><code>既然已经信誓旦旦的说了，总不能啥也不干吧。也就在这时候好像也是在stormzhang的推荐下知道了谷歌的studyjams活动，那时候我身边有个大神认为这个太基础会很占用时间的，我现在想想觉得不然，我认为它的学习模式和营造出的学习氛围相当棒！于是也吭哧吭哧的完成了第一阶段（ps:证书还没到QAQ），现在我也参加了第二阶段了，说实话，更有趣了~接着说，接下来就是各路大神都推荐的《第一行代码》，由于中间又是论文又是找工作的，这本书我就边敲边看了一半，书的确是蛮适合我这样的~赞一个~
+</code></pre>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+<h2>
+<a id="3由微信公众号引发的种种" class="anchor" href="#3%E7%94%B1%E5%BE%AE%E4%BF%A1%E5%85%AC%E4%BC%97%E5%8F%B7%E5%BC%95%E5%8F%91%E7%9A%84%E7%A7%8D%E7%A7%8D" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>3.由微信公众号引发的种种~</h2>
 
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+<pre><code>既然关注了stormzhang，肯定没理由，不关注他的公众号啊，于是借由此，我也发现了很多优秀的微信公众号。这时候我就蛮好奇的了，怎么建一个公众号呢，于是再知乎一下，也就慢慢的建了一个小公众号：littlestuffpleaseyou。因为没学过什么php，html，所以就只能用第三方平台来丰富这个小公众号了（麻烦的是未认证的订阅号不能跳转链接！）。期间还知道了一个有趣的东西，我发现很多大牛都有自己的博客网页，于是我想要不我也搭建个，咱难得不会，简单的还不会嘛？正好又学到了github这章，于是有了http://belayout.github.io/first.html这个页面。当然这里都还没开始写东西呢，我还需要学学~~~
+</code></pre>
 
-<p>You can <a href="https://help.github.com/articles/basic-writing-and-formatting-syntax/#mentioning-users-and-teams" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+<h2>
+<a id="4好说说为啥叫我想成为一个有趣的人这个题目" class="anchor" href="#4%E5%A5%BD%E8%AF%B4%E8%AF%B4%E4%B8%BA%E5%95%A5%E5%8F%AB%E6%88%91%E6%83%B3%E6%88%90%E4%B8%BA%E4%B8%80%E4%B8%AA%E6%9C%89%E8%B6%A3%E7%9A%84%E4%BA%BA%E8%BF%99%E4%B8%AA%E9%A2%98%E7%9B%AE" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>4.好，说说，为啥叫“我想成为一个有趣的人”这个题目</h2>
 
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
+<pre><code>因为我发现，我想要去了解去执行一件事都建立在我觉得它很有趣、能提升能力（zhuangbi）的特点上面。就比如我之所以接触视频编辑，就是因为觉得A站里面的鬼畜视频太有趣的基础上的。所以：去做有趣的事，成为有趣的人，that's my slogan！
+</code></pre>
       </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/belayout">belayout</a></p>
